added ClientSessionSubscriptionsMemoryLocalPersistence